--- a/README
+++ b/README
@@ -1,12 +1,21 @@
+Nick Hollis
+Josh Tuschl
+
 ****************
 CS:APP Proxy Lab
 ****************
 
+
 Makefile	- For building and handing in proxy
+
 README		- This file
 
+
+
 # Proxy source files
+
 proxy.{c,h}	- Primary proxy code
+
 csapp.{c,h}	- Wrapper and helper functions from the CS:APP text
 
 
