updated readme and tar file

--- a/README
+++ b/README
@@ -11,10 +11,11 @@ Makefile	- For building and handing in proxy
 README		- This file
 
 
+Documentation File   
 
 # Proxy source files
 
-proxy.{c,h}	- Primary proxy code
+proxy.c		- Primary proxy code
 
 csapp.{c,h}	- Wrapper and helper functions from the CS:APP text
 
